crates/weft-snapshots/tests/snapshots/swiftui/corpus-search-results.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-search-results as swiftui
---
// Generated by `weft swiftui` from the Weft screen "search".
// Regenerate it from the .weft source, or edit it and read it back with
// `weft import-swiftui`; the `weft…` helpers at the end carry what SwiftUI cannot say.

import Observation
import SwiftUI

/// The data the screen reads and writes.
@Observable
final class SearchModel {
    var query: String = ""
    var results: [ResultsItemData] = []

    struct ResultsItemData: Hashable, Sendable {
        var title: String = ""
        var snippet: String = ""
    }
}

/// The host actions the screen names.
enum SearchAction: String, CaseIterable, Sendable {
    case searchRun = "search.run"
    case resultsOpen = "results.open"
}

/// What the host receives when the screen fires an action.
struct SearchEvent: Sendable, Equatable {
    var action: SearchAction
    /// The id of the element that fired it.
    var id: String
    /// The data path of the list item it came from, e.g. `$.todos.2`.
    var item: String?
}

/// The design tokens the screen uses, in points.
struct SearchTheme: Sendable {
    var space = Space()

    struct Space: Sendable {
        var sm: CGFloat = 8
    }
}

struct SearchScreen: View {
    @Bindable var model: SearchModel
    var theme = SearchTheme()
    var perform: (SearchEvent) -> Void = { _ in }

    var body: some View {
        VStack(alignment: .leading) {
            Form {
                HStack(spacing: theme.space.sm) {
                    TextField("Search", text: $model.query)
                        .weftFieldType("search")
                        .accessibilityIdentifier("query")
                    Button {
                        submit("form")
                    } label: {
                        Text("Search")
                    }
                    .buttonStyle(.borderedProminent)
                    .accessibilityIdentifier("go")
                }
                .accessibilityElement(children: .contain)
                .accessibilityIdentifier("bar")
            }
            .onSubmit { send(.searchRun, "form") }
            .accessibilityElement(children: .contain)
            .accessibilityIdentifier("form")
            List {
                ForEach(Array(model.results.enumerated()), id: \.offset) { resultIndex, result in
                    HStack {
                        Text(result.title)
                            .font(.title2)
                            .accessibilityHeading(.h3)
                            .accessibilityAddTraits(.isHeader)
                            .accessibilityIdentifier("result-title")
                        Text(result.snippet)
                            .accessibilityIdentifier("result-snippet")
                        Button {
                            send(.resultsOpen, "result-open", item: "$.results.\(resultIndex)")
                        } label: {
                            Text("Open")
                        }
                        .buttonStyle(.borderless)
                        .accessibilityRemoveTraits(.isButton)
                        .accessibilityAddTraits(.isLink)
                        .accessibilityIdentifier("result-open")
                    }
                    .accessibilityElement(children: .contain)
                    .accessibilityIdentifier("result")
                }
                .weftEach("results-each")
            }
            .overlay {
                if model.results.isEmpty {
                    Text("No results found")
                        .accessibilityIdentifier("empty")
                }
            }
            .accessibilityElement(children: .contain)
            .accessibilityIdentifier("results")
        }
        .accessibilityElement(children: .contain)
        .accessibilityLabel("Search")
        .accessibilityIdentifier("search")
    }

    private func send(_ action: SearchAction, _ id: String, item: String? = nil) {
        perform(SearchEvent(action: action, id: id, item: item))
    }

    /// A submit button fires its form's submit action.
    private func submit(_ form: String) {
        switch form {
        case "form": send(.searchRun, "form")
        default: break
        }
    }
}

#Preview {
    SearchScreen(model: SearchModel())
}

// MARK: - Weft helpers
// Weft semantics SwiftUI has no modifier for. `fileprivate`, so every generated screen carries
// its own copy and several screens can live in one module.

fileprivate extension View {
    /// A Weft attribute SwiftUI cannot express; kept so the screen imports back unchanged.
    func weftProp(_ name: String, _ value: String) -> some View { self }
    func weftProp(_ name: String, _ value: Bool) -> some View { self }
    func weftProp(_ name: String, _ value: Int) -> some View { self }
    func weftProp(_ name: String, _ value: Double) -> some View { self }
    /// Removes the view from layout and accessibility while `hidden` is true.
    func weftHidden(_ hidden: Bool) -> some View { modifier(WeftHidden(hidden: hidden)) }
    /// Names the `<each>` element the repeated content came from.
    func weftEach(_ id: String) -> some View { self }
    /// The keyboard a text field of this Weft `type` asks for.
    func weftFieldType(_ type: String) -> some View {
        #if os(iOS)
        switch type {
        case "email": return AnyView(self.keyboardType(.emailAddress).textInputAutocapitalization(.never))
        case "number": return AnyView(self.keyboardType(.decimalPad))
        case "search": return AnyView(self.submitLabel(.search))
        default: return AnyView(self)
        }
        #else
        return self
        #endif
    }
}

fileprivate struct WeftHidden: ViewModifier {
    let hidden: Bool
    func body(content: Content) -> some View {
        if !hidden { content }
    }
}

fileprivate struct WeftCheckboxStyle: ToggleStyle {
    func makeBody(configuration: Configuration) -> some View {
        Button { configuration.isOn.toggle() } label: {
            HStack {
                Image(systemName: configuration.isOn ? "checkmark.square.fill" : "square")
                configuration.label
            }
        }
        .buttonStyle(.plain)
        .accessibilityValue(configuration.isOn ? "checked" : "unchecked")
    }
}

/// Only web and mail links open; anything else in a document is ignored.
fileprivate func weftURL(_ href: String) -> URL? {
    guard let url = URL(string: href) else { return nil }
    switch url.scheme?.lowercased() {
    case "http", "https", "mailto", nil: return url
    default: return nil
    }
}

// Weft reads any value as text, a flag or a number (SPEC §2.1); these convert the model's types.
fileprivate func weftText(_ v: Int) -> String { String(v) }
fileprivate func weftText(_ v: Bool) -> String { v ? "true" : "false" }
fileprivate func weftText<T>(_ v: T) -> String { "" }
// An array or object is true even when empty (SPEC §2.1): only the model's scalars can be false.
fileprivate func weftOn<T>(_ v: T) -> Bool { true }
fileprivate func weftInt(_ v: String) -> Int { Int(v) ?? 0 }
fileprivate func weftInt(_ v: Bool) -> Int { v ? 1 : 0 }
fileprivate func weftInt<T>(_ v: T) -> Int { 0 }
fileprivate func weftColumns(_ v: Int) -> Int { max(1, v) }
fileprivate func weftHeadingLevel(_ v: Int) -> AccessibilityHeadingLevel {
    switch min(max(v, 1), 6) { case 1: .h1; case 2: .h2; case 3: .h3; case 4: .h4; case 5: .h5; default: .h6 }
}
fileprivate func weftHeadingFont(_ v: Int) -> Font {
    switch min(max(v, 1), 6) { case 1: .largeTitle; case 2: .title; case 3: .title2; case 4: .title3; case 5: .headline; default: .subheadline }
}
